--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="#"><img src="img/logo.png" class="logo" alt=""></a>
 
         <div>
-            <ul id="navbar">fdsa
+            <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
